Fixes captions so that they aren't overrun by text
Captions that are too long get elipsis-d.

--- a/assets/trix/stylesheets/content.scss
+++ b/assets/trix/stylesheets/content.scss
@@ -73,9 +73,12 @@
     .caption {
       padding: 0;
       left: 0;
+      overflow: hidden;
       position: absolute;
       text-align: center;
+      text-overflow: ellipsis;
       width: 100%;
+      white-space: nowrap;
 
       .size {
         &:before {
